--- a/Zasm/Views/Home/Index.cshtml
+++ b/Zasm/Views/Home/Index.cshtml
@@ -1,8 +1,37 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+@{
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<div class="row">
+    <div class="col-md-8">
+        <div class="jumbotron">
+            <h1 class="display-4">Welcome to Zenia Art School!</h1>
+            <p class="lead">
+                Zenia Art School is an art school for kids.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse facilisis vitae dolor a congue.
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed
+                vitae neque eget lectus tempor varius vel sed dolor. Nam vel mauris posuere, pellentesque enim nec,
+                dapibus nibh. Aliquam nibh tellus, rhoncus tincidunt nulla vitae, posuere imperdiet enim. Donec
+                rhoncus magna massa, a consectetur ante rutrum id. Donec malesuada, felis vitae rutrum molestie,
+                enim magna lacinia nunc, in vulputate tellus nibh et enim. Quisque vehicula mi nunc, id malesuada
+                quam maximus id. Curabitur fermentum egestas leo, ut pretium mi bibendum sed.
+            </p>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <h4 class="text-center">Student Showcase</h4>
+        <div class="card">
+            <img src="https://via.placeholder.com/200x150" class="card-img-top" alt="Student Showcase 1">
+            <div class="card-body">
+                <h5 class="card-title">Title by Author</h5>
+                <p class="card-text">
+                    <em>Teacher's Comments</em>: In tortor lorem, auctor vehicula mattis eu, varius ac leo. Ut est est,
+                    auctor id eleifend quis, semper in sapien. Integer laoreet velit ut erat congue, quis porta
+                    tellus interdum.
+                </p>
+            </div>
+        </div>
+        <button class="btn btn-primary mt-2">See More</button>
+    </div>
