--- a/Zasm/Views/_ViewImports.cshtml
+++ b/Zasm/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using Zasm
+@using Zasm
 @using Zasm.Models
+@using Zasm.Security.Constants
+@using Microsoft.AspNetCore.Authorization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
