--- a/Zasm/Views/_ViewImports.cshtml
+++ b/Zasm/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Zasm.Models
 @using Zasm.Security.Constants
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
