--- a/Zasm/Views/Shared/_Layout.cshtml
+++ b/Zasm/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@inject IViewLocalizer Localizer
-@inject Microsoft.AspNetCore.Authorization.IAuthorizationService authorizationService
+﻿@inject Microsoft.AspNetCore.Authorization.IAuthorizationService authorizationService
 <!DOCTYPE html>
 <html lang="en">
 <head>
