--- a/Zasm/Views/_ViewImports.cshtml
+++ b/Zasm/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
-@using Zasm
+﻿@using Zasm
 @using Zasm.Models
 @using Zasm.Security.Constants
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IViewLocalizer Localizer
