--- a/Zasm/Views/Home/AccessDenied.cshtml
+++ b/Zasm/Views/Home/AccessDenied.cshtml
@@ -1,9 +1,8 @@
-
-@{
-    ViewData["Title"] = "Access Denied";
+﻿@{
+    ViewData["Title"] = Localizer["AccessDenied"];
 }
-<div class="alert alert-danger mt-3" role="alert">Access Denied</div>
-<p>You are not authorized to access this resource.</p>
+<div class="alert alert-danger mt-3" role="alert">@Localizer["AccessDenied"]</div>
+<p>@Localizer["AccessDeniedMsg"]</p>
 
 <environment names="Development">
     <dl>
