--- a/Zasm/Views/Lessons/Add.cshtml
+++ b/Zasm/Views/Lessons/Add.cshtml
@@ -1,12 +1,12 @@
-@model LessonInputModel
+﻿@model LessonInputModel
 @{
-    ViewData["Title"] = "New Student";
+    ViewData["Title"] = Localizer["AddLesson"];
 }
 
 <nav>
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a asp-action="Index">Lessons</a></li>
-        <li class="breadcrumb-item active">Add Lesson</li>
+        <li class="breadcrumb-item"><a asp-action="Index">@Localizer["Lessons"]</a></li>
+        <li class="breadcrumb-item active">@Localizer["AddLesson"]</li>
     </ol>
 </nav>
 
@@ -29,10 +29,10 @@
     </div>
     <div class="form-row">
         <div class="col-4">
-            <a class="btn btn-secondary" asp-action="Index">Cancel</a>
+            <a class="btn btn-secondary" asp-action="Index">@Localizer["Cancel"]</a>
         </div>
         <div class="col-8 text-right">
-            <button type="submit" class="btn btn-primary">Add</button>
+            <button type="submit" class="btn btn-primary">@Localizer["Add"]</button>
         </div>
     </div>
 </form>
