--- a/Zasm/Views/Students/Edit.cshtml
+++ b/Zasm/Views/Students/Edit.cshtml
@@ -1,12 +1,12 @@
-@model StudentInputModel
+﻿@model StudentInputModel
 @{
-    ViewData["Title"] = "Edit Student";
+    ViewData["Title"] = Localizer["EditStudent"];
 }
 
 <nav>
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a asp-action="Index">Students</a></li>
-        <li class="breadcrumb-item active">Add Student</li>
+        <li class="breadcrumb-item"><a asp-action="Index">@Localizer["Students"]</a></li>
+        <li class="breadcrumb-item active">@Model.Name</li>
     </ol>
 </nav>
 
@@ -45,10 +45,10 @@
     </div>
     <div class="form-row">
         <div class="col-4">
-            <a class="btn btn-secondary" asp-action="Index">Cancel</a>
+            <a class="btn btn-secondary" asp-action="Index">@Localizer["Cancel"]</a>
         </div>
         <div class="col-8 text-right">
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary">@Localizer["Save"]</button>
         </div>
     </div>
 </form>
