Change zh-CN to zh to make it work on Ubuntu

--- a/Zasm/Views/Shared/_Layout.cshtml
+++ b/Zasm/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
             });
             $("#chinese").click(function () {
                 if (!$(this).hasClass("btn-success")) {
-                    Cookies.set(".AspNetCore.Culture", "c=zh-CN|uic=zh-CN", { expires: 365 });
+                    Cookies.set(".AspNetCore.Culture", "c=zh|uic=zh", { expires: 365 });
                     window.location.reload();
                 }
             });
